--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             <!--                <category android:name="android.intent.category.LAUNCHER" />-->
             <!--            </intent-filter>-->
         </activity>
-        <activity android:name="com.deepsiam.features.groups.GroupsActivity">
+        <activity android:name="com.deepsiam.features.groups.FeatureActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
